# pheonix

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: black.yml  continous_integration.yml  continuous_integration.yml
snipergw/: __main__.py  model.py  paths.py  plan.py  run.py  skymap.py
snipergw/submit/: __init__.py  winter.py  ztf.py
tests/: test_plan.py
tests/testdata/: test_schedule.csv
