[tool.poetry]
name = "snipergw"
version = "0.1.0"
description = ""
authors = ["Robert Stein <rdstein@caltech.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
backoff = "^2.2.1"
ligo-gracedb = "^2.10.0"
jupyter = "^1.0.0"
lxml = "^4.9.2"
wget = "^3.2"
astropy = "^5.2.2"
numpy = "1.24.2"
gwemopt = { path = "./snipergw/gwemopt", develop = true }
pandas = "^1.5.3"
pydantic = "^1.10.7"
planobs = "^0.7.1"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
